--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,9 @@
+body {
+  background-image: url("https://lh3.googleusercontent.com/proxy/apgwEW1e13BNqZmXyIAMVgABym5BPoQSUgcRGN7MJMyePKymgsbWiKOfllZwgF3G8bapPrgK9JamjGJDN3tXTjU");
+  background-color: #d30e0e;
+ }
+
+
 #title {
     text-align: center;
     margin: 50px 0px 20px 0px;
