--- a/client/style.css
+++ b/client/style.css
@@ -7,7 +7,7 @@ body {
 
 #modify {
   margin: 2em auto;
-  padding: 1em;
+  /* padding: 1em; */
   width: 30%;
   color: #606060;
   border: 2px solid #a3703e;
