--- a/client/style.css
+++ b/client/style.css
@@ -58,6 +58,9 @@ body {
   text-align: center;
   font-size: 15px;
   font-weight: bold;
+  /* border :solid 2px red;
+  padding : 10px;
+  width :100%; */
 }
 
 #input-reserve > 
