some more updates

--- a/client/style.css
+++ b/client/style.css
@@ -37,7 +37,7 @@ body {
 .input-group-append1 {
   /* width: 80%; */
   text-align: center;
-  /* margin-bottom: 0px; */
+  margin-bottom: 5px;
   /* padding-right: 40%; */
   /* padding-left: 40%; */
 }
